--- a/src/scss/normalize&zero.scss
+++ b/src/scss/normalize&zero.scss
@@ -329,3 +329,7 @@ input[type="radio"].visually-hidden {
 .inputclass:-ms-input-placeholder {
   text-align: center;
 }
+
+address {
+  font-style: normal;
+}
