--- a/src/scss/blocks-scss/offer.scss
+++ b/src/scss/blocks-scss/offer.scss
@@ -6,11 +6,12 @@
       color: white;
       font-size: 1rem;
       font-family: var(--font-light);
-
+      text-align: left;
+      line-height: 1.2;
     }
 
     button {
-      margin-top: 20px;
+      margin-top: 25px;
       color: var(--corp-violet);
       background-color: white;
     }
