--- a/src/scss/blocks-scss/_footer.scss
+++ b/src/scss/blocks-scss/_footer.scss
@@ -3,13 +3,49 @@
   background-color: #311B4C;
   min-height: 20px;
   font-size: 16px;
-  padding: 20px;
+  padding: 30px 0;
+
+  .image svg {
+    height: 35px;
+  }
+
+  .container {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 
   address {
     display: flex;
-    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 80px;
+    font-family: var(--font-light);
     line-height: 1.5;
-    justify-content: space-between;
-    flex-grow: 2;
+
+    span {
+      font-family: var(--title-font);
+    }
+  }
+
+  .socials {
+    font-size: 0;
+    display: flex;
+
+    a {
+      cursor: pointer;
+    }
+
+    a:hover {
+      position: relative;
+      top: -1px;
+    }
+
+    svg {
+      width: 50px;
+      height: 50px;
+    }
   }
 }
