--- a/src/scss/blocks-scss/advantages.scss
+++ b/src/scss/blocks-scss/advantages.scss
@@ -37,7 +37,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
-      justify-content: space-evenly;
+      justify-content: center;
     }
 
     li {
