--- a/src/scss/blocks-scss/made-in-kaz.scss
+++ b/src/scss/blocks-scss/made-in-kaz.scss
@@ -2,7 +2,8 @@
   background-color: #e6f7f9;
 
   .container {
-    padding: 30px 20px;
+    padding: 30px 40px;
+    max-width: 1240px;
   }
 
   .image {
