--- a/src/scss/blocks-scss/our-production.scss
+++ b/src/scss/blocks-scss/our-production.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 0 20px;
   gap: 35px;
 
   h6 {
@@ -45,6 +44,10 @@
     font-family: var(--font-light);
     color: #666666;
   }
+}
+
+.our-production h2 {
+  padding: 30px;
 }
 
 .our-production {
