--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,7 +64,8 @@ h3 {
 }
 
 .container {
-  max-width: 1600px;
+  max-width: 1660px;
+  padding: 20px 30px;
   margin: 0 auto;
 }
 
@@ -85,6 +86,7 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  // flex-wrap: wrap;
 }
 
 .df--fd-c {
@@ -96,6 +98,7 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .df--ai-c {
@@ -154,6 +157,11 @@ h3 {
 
 .white {
   color: white;
+}
+
+.baner {
+  max-width: 1600px;
+  margin: 0 auto;
 }
 
 @import './blocks-scss/header';
