--- a/src/scss/blocks-scss/reviews.scss
+++ b/src/scss/blocks-scss/reviews.scss
@@ -7,12 +7,11 @@
 
 .reviews--item {
   max-width: 200px;
-  // overflow: hidden;
-  border-radius: 5px;
 
-  img {
-    box-shadow: 1px 1px 6px 1px rgba(0, 0, 0, 0.11);
-
+  .reviews--item__image {
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 1px 1px 6px 1px rgba(29, 29, 29, 0.11);
   }
 
   p {
