--- a/src/scss/blocks-scss/modals.scss
+++ b/src/scss/blocks-scss/modals.scss
@@ -1,28 +1,27 @@
-.modal-close {
-  position: absolute;
-  top: 10px;
-  right: 12px;
-
-  svg {
-    width: 35px;
-    height: 35px;
-  }
-}
-
-.modal-close:hover {
-  top: 9px;
+.modal-phone.visible {
+  opacity: 1;
+  visibility: visible;
+  top: -10px;
+  transition: opacity .75s ease-in-out, visibility 0s, top .5s linear;
+  overflow: auto;
 }
 
 .modal-phone {
-  max-width: 500px;
-  position: relative;
+  transition: opacity .75s ease-in-out, visibility 0s .75s, top .5s linear;
+  visibility: hidden;
+  opacity: 0;
+  max-width: 450px;
+  position: absolute;
+  top: 5px;
+  right: 0;
+  z-index: 100;
   border-radius: 8px;
-  padding: 20px;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, .15);
-
+  padding: 25px 25px 15px;
+  box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.2);
+  background-color: white;
 
   h6 {
-    font-size: .9rem;
+    font-size: .8rem;
     color: var(--corp-violet);
     font-family: var(--title-font);
     text-align: center;
@@ -30,30 +29,62 @@
 }
 
 .modal-phone--list {
-  margin-top: 20px;
+  margin-top: 10px;
 
   label {
     cursor: pointer;
     display: block;
-    font-size: .7rem;
+    font-size: .6rem;
     color: #989898;
     display: flex;
     align-items: center;
   }
 
   li {
-    margin-top: 20px;
-    padding: 5px;
+    padding: 22px 10px;
     border-radius: 5px;
+    position: relative;
+  }
+
+  li:not(:last-child)::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 2px solid var(--corp-violet);
+    // transform: translateX(-50%);
   }
 
   li:hover {
-    background-color: #fdf9ff9a;
+    background-color: rgb(247, 247, 247);
+
+    svg {
+      top: 1px;
+    }
   }
 
   svg {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin-right: 20px;
+    position: relative;
   }
+}
+
+.modal-close {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  opacity: .8;
+
+  svg {
+    width: 30px;
+    height: 30px;
+  }
+}
+
+.modal-close:hover {
+  top: 11px;
+  opacity: 1;
 }
