--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -87,6 +87,16 @@ h3 {
   margin: 0 auto;
 }
 
+.overflow-body {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(15, 20, 24, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  // z-index: 50;
+}
+
 .padding {
   padding: 20px;
 }
@@ -155,6 +165,10 @@ h3 {
 
 .mt-0-75 {
   margin-top: .75rem;
+}
+
+.mt-10px {
+  margin-top: 10px;
 }
 
 .fz-0 {
