--- a/src/scss/blocks-scss/_header.scss
+++ b/src/scss/blocks-scss/_header.scss
@@ -23,10 +23,63 @@
 
   .header-buttons {
     position: relative;
-
+    text-align: center;
   }
 }
 
+@media (max-width: 1200px) {
+  .header {
+    img {
+      max-width: 180px;
+      height: auto;
+      min-width: 150px;
+    }
 
+    svg {
+      width: 40px;
+      height: 40px;
+    }
 
-@media (max-width: 1620px) {}
+    .header-buttons {
+      position: relative;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .header {
+    img {
+      max-width: 150px;
+      min-width: auto;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    img {
+      max-width: 120px;
+    }
+
+    svg {
+      width: 35px;
+      height: 35px;
+    }
+
+    .header-button {
+      margin-right: 15px;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .header {
+    img {
+      max-width: 90px;
+      min-width: auto;
+    }
+  }
+}
+
+@media (max-width: 576px) {}
