--- a/src/scss/blocks-scss/about-us.scss
+++ b/src/scss/blocks-scss/about-us.scss
@@ -1,4 +1,11 @@
 .about-us {
+  background-image: url('./img/doctors-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #e0eaf4;
+  background-size: cover;
+  padding: 30px 0px;
+
   .logo {
     max-width: 300px;
     margin: 0 auto;
@@ -8,8 +15,14 @@
     font-size: var(--p);
     text-align: center;
   }
+}
 
-  .about-us--container {
-    padding: 20px 40px;
-  }
+.about-us--title {
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.about-us--descr {
+  background-color: rgba(255, 255, 255, 0.356)
 }
