--- a/src/scss/blocks-scss/_footer.scss
+++ b/src/scss/blocks-scss/_footer.scss
@@ -11,7 +11,7 @@
 
   .container {
     display: flex;
-    gap: 30px;
+    gap: 40px;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
@@ -20,8 +20,8 @@
   address {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 80px;
+    justify-content: flex-start;
+    gap: 70px;
     font-family: var(--font-light);
     line-height: 1.5;
 
@@ -44,8 +44,43 @@
     }
 
     svg {
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
     }
+  }
+}
+
+@media (max-width: 650px) {
+  .footer address {
+    gap: 30px;
+  }
+
+  .footer address :first-child {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .footer .container {
+    padding: 0 20px;
+  }
+
+  .footer {
+    font-size: 14px;
+  }
+
+  .footer .container {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .footer .image svg {
+    width: 270px;
+    height: 30px;
+  }
+
+  .footer address {
+    gap: 20px;
   }
 }
