--- a/src/scss/blocks-scss/advantages.scss
+++ b/src/scss/blocks-scss/advantages.scss
@@ -64,3 +64,85 @@
   }
 
 }
+
+@media (max-width: 1200px) {
+
+  .advantages .positive li {
+    font-size: 20px;
+    flex-basis: 290px;
+    height: 180px;
+  }
+
+  .advantages .positive ul {
+    gap: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+
+  .advantages .negatives li p {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 650px) {
+
+  .advantages .positive li {
+    font-size: 18px;
+    flex-basis: 240px;
+    height: 160px;
+  }
+
+  .advantages .positive ul {
+    gap: 10px;
+  }
+}
+
+@media (max-width: 576px) {
+
+  .advantages .positive li {
+    font-size: 17px;
+    flex-basis: 220px;
+    height: 140px;
+  }
+}
+
+@media (max-width: 490px) {
+
+  .advantages .negatives li p {
+    font-size: 18px;
+  }
+
+  .advantages .positive li {
+    font-size: 18px;
+    flex-basis: 100%;
+    min-height: 90px;
+    height: auto;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .advantages h3 {
+    font-size: 21px;
+  }
+
+  .advantages .positive ul {
+    gap: 10px;
+  }
+
+  .advantages .negatives li p {
+    font-size: 16px;
+  }
+
+  .advantages .positive li {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 350px) {
+  .advantages .positive li {
+    font-size: 15px;
+
+  }
+}
