--- a/src/scss/blocks-scss/offer.scss
+++ b/src/scss/blocks-scss/offer.scss
@@ -43,3 +43,56 @@
   }
 
 }
+
+@media (max-width: 768px) {
+
+  .offer .offer--image,
+  .offer img {
+    width: 225px;
+    margin-right: 0;
+  }
+
+  .offer .offer--text {
+    padding: 20px 20px 20px 0;
+  }
+
+}
+
+@media (max-width: 650px) {
+
+  .offer .offer--image,
+  .offer img {
+    width: 180px;
+  }
+
+  .offer .offer--text h3 {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 576px) {
+
+  .offer .offer--image,
+  .offer img {
+    width: 160px;
+  }
+
+}
+
+@media (max-width: 490px) {
+
+  .offer .offer--text h3 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .offer .offer--image {
+    display: none;
+  }
+
+  .offer .offer--text {
+    padding: 30px 0;
+  }
+}
