--- a/src/scss/blocks-scss/our-production.scss
+++ b/src/scss/blocks-scss/our-production.scss
@@ -7,7 +7,7 @@
   h6 {
     color: var(--corp-violet);
     font-family: var(--title-font);
-    font-size: .65rem;
+    font-size: 22px;
   }
 
   li {
@@ -48,4 +48,103 @@
 
 .our-production h2 {
   padding: 30px;
+}
+
+@media (max-width: 1080px) {
+  .our-production ul {
+
+    li {
+      max-width: 440px;
+    }
+
+    img {
+      width: 160px;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .our-production ul {
+    gap: 25px;
+
+    li {
+      max-width: 100%;
+      width: 100%;
+    }
+
+    img {
+      width: 140px;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .our-production .container {
+    padding-top: 0;
+  }
+}
+
+@media (max-width: 490px) {
+  .our-production h2 {
+    padding: 25px;
+  }
+
+  .our-production ul h6 {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 460px) {
+
+  .our-production ul h6 {
+    font-size: 18px;
+  }
+
+  .our-production ul img {
+    width: 120px;
+  }
+
+  .our-production ul .text {
+    margin-top: 10px;
+    font-size: 14px;
+  }
+
+  .our-production ul .quantity {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 420px) {
+
+  .our-production h2 {
+    padding: 20px;
+  }
+
+  .our-production ul img {
+    max-width: 100px;
+  }
+
+  .our-production ul .our-production--description {
+    margin-left: 15px;
+  }
+
+}
+
+@media (max-width: 350px) {
+
+  .our-production ul h6 {
+    font-size: 16px;
+  }
+
+  .our-production ul .text {
+    font-size: 13px;
+  }
+
+  .our-production ul .quantity {
+    font-size: 11px;
+  }
+
+  .our-production ul img {
+    max-width: 80px;
+  }
 }
