--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,6 +43,7 @@ button {
   display: inline-block;
   padding: 12px;
   color: white;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -205,19 +206,35 @@ h3 {
 
 @media (max-width: 992px) {
   :root {
-    font-size: 28px;
+    font-size: 30px;
   }
+
 }
 
 @media (max-width: 768px) {
   :root {
-    font-size: 24px;
+    font-size: 28px;
   }
 }
 
 @media (max-width: 576px) {
   :root {
-    font-size: 20px;
+    font-size: 24px;
+    --p: 18px;
+  }
+
+  .button {
+    font-size: 14px;
+  }
+
+  .container {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 350px) {
+  .button {
+    font-size: 13px;
   }
 }
 
