--- a/src/scss/blocks-scss/modals.scss
+++ b/src/scss/blocks-scss/modals.scss
@@ -34,7 +34,7 @@
   label {
     cursor: pointer;
     display: block;
-    font-size: .6rem;
+    font-size: 20px;
     color: #989898;
     display: flex;
     align-items: center;
@@ -89,8 +89,34 @@
   opacity: 1;
 }
 
+@media (max-width: 992px) {
+  .modal-phone--list label {
+    font-size: 18px;
+  }
+}
+
 @media (max-width: 650px) {
-  .modal-phone.visible {
+  .modal-phone {
     padding: 16px;
+  }
+
+  .modal-phone--list label {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 400px) {
+  .modal-phone--list label {
+    font-size: 15px;
+  }
+
+  .modal-phone--list svg {
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+  }
+
+  .modal-phone--list li {
+    padding: 20px 5px;
   }
 }
