--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -247,3 +247,8 @@ h3 {
 @import './blocks-scss/advantages';
 @import './blocks-scss/reviews';
 @import './blocks-scss/modals';
+
+// .swiper {
+//   width: 600px;
+//   height: 300px;
+// }
