--- a/dist-out/styles.css
+++ b/dist-out/styles.css
@@ -989,13 +989,25 @@ h3 {
   .offer .offer--text h3 {
     font-size: 22px;
   }
-}
-@media (max-width: 400px) {
+  .offer .offer--image,
+  .offer img {
+    width: 140px;
+  }
   .offer .offer--image {
-    display: none;
+    position: absolute;
+    right: -40px;
   }
   .offer .offer--text {
-    padding: 30px 0;
+    padding-right: 60px;
+  }
+  .offer {
+    overflow: hidden;
+  }
+}
+@media (max-width: 400px) {
+  .offer .offer--image,
+  .offer img {
+    width: 130px;
   }
 }
 .made-in-kaz {
@@ -1280,7 +1292,7 @@ h3 {
 .modal-phone--list label {
   cursor: pointer;
   display: block;
-  font-size: 0.6rem;
+  font-size: 20px;
   color: #989898;
   display: flex;
   align-items: center;
@@ -1327,8 +1339,29 @@ h3 {
   opacity: 1;
 }
 
+@media (max-width: 992px) {
+  .modal-phone--list label {
+    font-size: 18px;
+  }
+}
 @media (max-width: 650px) {
-  .modal-phone.visible {
+  .modal-phone {
     padding: 16px;
+  }
+  .modal-phone--list label {
+    font-size: 16px;
+  }
+}
+@media (max-width: 400px) {
+  .modal-phone--list label {
+    font-size: 15px;
+  }
+  .modal-phone--list svg {
+    width: 30px;
+    height: 30px;
+    margin-right: 15px;
+  }
+  .modal-phone--list li {
+    padding: 20px 5px;
   }
 }
