--- a/src/scss/blocks-scss/modals.scss
+++ b/src/scss/blocks-scss/modals.scss
@@ -89,6 +89,55 @@
   opacity: 1;
 }
 
+.modal {
+  display: none;
+  padding: 20px;
+
+  .modal-wrapper {
+    max-width: 600px;
+    border-radius: 8px;
+    padding: 25px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 0.2);
+    background-color: white;
+  }
+
+  button {
+    margin-top: 15px;
+  }
+
+  h6 {
+    font-size: 0.6rem;
+    font-family: var(--title-font);
+    color: var(--corp-violet);
+    text-align: center;
+  }
+
+  .modal-buttons-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.modal.visible {
+  z-index: 150;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(15, 20, 24, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+
+// ------------------------
+
 @media (max-width: 992px) {
   .modal-phone--list label {
     font-size: 18px;
