--- a/src/scss/blocks-scss/advantages.scss
+++ b/src/scss/blocks-scss/advantages.scss
@@ -33,6 +33,14 @@
     padding-top: .5rem;
     padding-bottom: .5rem;
 
+    li span {
+      display: none;
+    }
+
+    h3 {
+      color: var(--corp-violet)
+    }
+
     ul {
       display: flex;
       flex-wrap: wrap;
@@ -41,7 +49,7 @@
     }
 
     li {
-      // width: 360px;
+      position: relative;
       height: 200px;
       flex-basis: 340px;
       flex-shrink: 5;
@@ -101,9 +109,39 @@
 @media (max-width: 576px) {
 
   .advantages .positive li {
-    font-size: 17px;
-    flex-basis: 220px;
-    height: 140px;
+    font-size: 20px;
+    background-image: none;
+    background-color: transparent;
+    height: auto;
+    color: #343434;
+    text-align: left;
+    justify-content: flex-start;
+    padding: 20px 0 20px 0;
+    border-radius: 0;
+  }
+
+  .positive li:not(:last-child)::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 1px solid var(--violet);
+  }
+
+  .advantages .positive li span {
+    color: var(--corp-violet);
+    font-size: 1rem;
+    margin-right: 10px;
+    display: initial;
+  }
+
+  // .advantages .positive li::before {
+  //   content: '✔';
+  // }
+
+  .advantages .positive ul {
+    display: block;
   }
 }
 
@@ -111,13 +149,6 @@
 
   .advantages .negatives li p {
     font-size: 18px;
-  }
-
-  .advantages .positive li {
-    font-size: 18px;
-    flex-basis: 100%;
-    min-height: 90px;
-    height: auto;
   }
 }
 
