--- a/src/scss/blocks-scss/_footer.scss
+++ b/src/scss/blocks-scss/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   color: white;
-  background-color: #311B4C;
+  background-color: #3b005e;
   min-height: 20px;
   font-size: 16px;
   padding: 30px 0;
