--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -21,6 +21,6 @@
   src: url('./fonts/Inter-Light.woff2') format('woff2'),
     url('./fonts/Inter-Light.ttf') format('truetype');
   font-style: normal;
-  font-weight: normal;
+  font-weight: 300;
   text-rendering: optimizeLegibility;
 }
