--- a/src/scss/blocks-scss/_footer.scss
+++ b/src/scss/blocks-scss/_footer.scss
@@ -50,6 +50,12 @@
   }
 }
 
+@media (max-width: 800px) {
+  .footer address {
+    gap: 50px;
+  }
+}
+
 @media (max-width: 650px) {
   .footer address {
     gap: 30px;
@@ -71,6 +77,17 @@
 
   .footer .container {
     gap: 20px;
+  }
+}
+
+@media (max-width: 490px) {
+  .footer .socials {
+    margin-top: 10px;
+  }
+
+  .footer .socials svg {
+    width: 35px;
+    height: 35px;
   }
 }
 
