--- a/src/scss/blocks-scss/about-us.scss
+++ b/src/scss/blocks-scss/about-us.scss
@@ -1,10 +1,16 @@
+.about-us-wrapper {
+  background-color: #e0eaf4;
+}
+
 .about-us {
   background-image: url('./img/doctors-bg.png');
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #e0eaf4;
+
   background-size: cover;
   padding: 30px 0px;
+  max-width: 1920px;
+  margin: 0 auto;
 
   .logo {
     max-width: 300px;
