--- a/src/scss/blocks-scss/offer.scss
+++ b/src/scss/blocks-scss/offer.scss
@@ -14,6 +14,7 @@
       font-family: var(--font-light);
       text-align: left;
       line-height: 1.2;
+      font-weight: 300;
     }
 
     button {
