--- a/src/scss/swiper/swiper.scss
+++ b/src/scss/swiper/swiper.scss
@@ -1,15 +1,3 @@
-/**
- * Swiper 11.0.5
- * Most modern mobile touch slider and framework with hardware accelerated transitions
- * https://swiperjs.com
- *
- * Copyright 2014-2023 Vladimir Kharlampidi
- *
- * Released under the MIT License
- *
- * Released on: November 22, 2023
- */
-
 @import 'swiper-vars.scss';
 
 @at-root {
@@ -292,4 +280,5 @@
 
 /* Slide styles end */
 
-@import './pagination.scss'
+@import './pagination.scss';
+@import './navigation.scss';
