--- a/src/scss/blocks-scss/modals.scss
+++ b/src/scss/blocks-scss/modals.scss
@@ -1,7 +1,6 @@
 .modal-phone.visible {
   opacity: 1;
   visibility: visible;
-  // top: -10px;
   transition: opacity .5s ease-in-out, visibility 0s, top .25s linear;
   overflow: auto;
 }
@@ -10,10 +9,9 @@
   transition: opacity .5s ease-in-out, visibility 0s .5s, top .25s linear;
   visibility: hidden;
   opacity: 0;
+  top: 0;
   max-width: 450px;
   position: absolute;
-  top: 5px;
-  right: 0;
   z-index: 100;
   border-radius: 8px;
   padding: 25px 25px 15px;
@@ -142,7 +140,7 @@
   top: 0;
   right: 0;
   left: 0;
-  background-color: rgba(15, 20, 24, 0.5);
+  background-color: rgba(15, 20, 24, 0.8);
   display: flex;
   align-items: center;
   justify-content: center;
