--- a/src/scss/blocks-scss/reviews.scss
+++ b/src/scss/blocks-scss/reviews.scss
@@ -2,8 +2,7 @@
   display: flex;
   gap: 40px;
   justify-content: center;
-  margin-top: 5px;
-  flex-wrap: wrap;
+  margin-top: 10px;
 }
 
 .reviews--item {
@@ -33,11 +32,17 @@
   }
 
   .reviews--item {
-    max-width: 160px;
+    max-width: 180px;
   }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 576px) {
+  .reviews--block {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 490px) {
   .reviews--item {
     max-width: 140px;
   }
