--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import './fonts.scss';
 @import './normalize&zero.scss';
 @import './swiper/swiper.scss';
+@import './modules-css/fancybox';
 
 
 :root {
@@ -95,10 +96,10 @@ h3 {
 }
 
 .overflow-body {
-  // width: 100%;
-  // height: 100%;
-  display: block;
-  background-color: rgba(15, 20, 24, 0.5);
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(15, 20, 24, 0.8);
   position: fixed;
   top: 0;
   left: 0;
