--- a/src/scss/blocks-scss/our-production.scss
+++ b/src/scss/blocks-scss/our-production.scss
@@ -1,4 +1,4 @@
-.our-production ul {
+.our-production .ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -10,7 +10,8 @@
     font-size: 22px;
   }
 
-  li {
+  .li {
+    height: auto;
     max-width: 480px;
     display: flex;
     padding: 20px;
@@ -43,10 +44,19 @@
   padding: 30px;
 }
 
-@media (max-width: 1080px) {
-  .our-production ul {
+.our-production .swiper-pagination {
+  position: static;
+  margin-top: 15px;
+}
 
-    li {
+.our-production .swiper-pagination-bullet {
+  background: rgba(79, 0, 125);
+}
+
+@media (max-width: 1080px) {
+  .our-production .ul {
+
+    .li {
       max-width: 440px;
     }
 
@@ -57,10 +67,10 @@
 }
 
 @media (max-width: 992px) {
-  .our-production ul {
+  .our-production .ul {
     gap: 25px;
 
-    li {
+    .li {
       max-width: 400px;
     }
 
@@ -71,7 +81,7 @@
 }
 
 @media (max-width: 885px) {
-  .our-production ul li {
+  .our-production .ul .li {
     max-width: 100%;
     width: 100%;
   }
@@ -83,32 +93,49 @@
   }
 }
 
+// - breakpoint
+@media (max-width: 576px) {
+  .our-production .ul {
+    flex-wrap: nowrap;
+    justify-content: normal;
+    gap: 0;
+  }
+
+  .our-production .ul .our-production--description {
+    justify-content: center;
+  }
+
+  .our-production .container {
+    overflow: hidden;
+  }
+}
+
 @media (max-width: 490px) {
   .our-production h2 {
     padding: 25px;
   }
 
-  .our-production ul h6 {
+  .our-production .ul h6 {
     font-size: 20px;
   }
 }
 
 @media (max-width: 460px) {
 
-  .our-production ul h6 {
+  .our-production .ul h6 {
     font-size: 18px;
   }
 
-  .our-production ul img {
+  .our-production .ul img {
     width: 110px;
   }
 
-  .our-production ul .text {
+  .our-production .ul .text {
     margin-top: 10px;
     font-size: 14px;
   }
 
-  .our-production ul .quantity {
+  .our-production .ul .quantity {
     font-size: 12px;
   }
 }
@@ -119,15 +146,15 @@
     padding: 20px;
   }
 
-  .our-production ul img {
+  .our-production .ul img {
     max-width: 90px;
   }
 
-  .our-production ul .our-production--description {
+  .our-production .ul .our-production--description {
     margin-left: 15px;
   }
 
-  .our-production ul .text {
+  .our-production .ul .text {
     font-size: 13px;
   }
 
@@ -135,15 +162,15 @@
 
 @media (max-width: 350px) {
 
-  .our-production ul h6 {
+  .our-production .ul h6 {
     font-size: 16px;
   }
 
-  .our-production ul .text {
+  .our-production .ul .text {
     font-size: 12px;
   }
 
-  .our-production ul img {
+  .our-production .ul img {
     max-width: 80px;
   }
 }
